--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             --accent-green: #4ade80;
             --accent-pink: #ec4899;
             --accent-red: #ef4444;
-            --accent-orange: #f97316; /* Snoeikleur */
-            --accent-wood: #a16207;
+            --accent-orange: #f97316;
             --text-color: #ffffff;
         }
 
@@ -46,7 +45,6 @@
             line-height: 1.3;
         }
 
-        /* ACTIE BALK */
         .action-bar {
             background: rgba(56, 189, 248, 0.15);
             border: 1px solid rgba(56, 189, 248, 0.4);
@@ -85,6 +83,9 @@
             padding: 25px;
             transition: all 0.4s ease;
             position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .fruit-card:hover {
@@ -133,23 +134,20 @@
             color: #fff;
         }
 
-        /* TRACK STYLES */
-        .track-container {
-            margin-bottom: 25px;
-        }
+        .track-container { margin-bottom: 20px; }
         
         .track-label {
-            font-size: 0.85rem;
+            font-size: 0.8rem;
             text-transform: uppercase;
             font-weight: 700;
-            margin-bottom: 8px;
+            margin-bottom: 5px;
             display: flex;
             justify-content: space-between;
             color: rgba(255,255,255,0.8);
         }
 
         .track-bg {
-            height: 12px;
+            height: 10px;
             background: rgba(0,0,0,0.5);
             border-radius: 10px;
             position: relative;
@@ -168,23 +166,14 @@
         .track-icon {
             position: absolute;
             right: -10px;
-            top: -14px;
-            font-size: 1.5rem;
+            top: -12px;
+            font-size: 1.3rem;
             filter: drop-shadow(0 2px 3px rgba(0,0,0,0.5));
             transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
-        /* Oogst Balk Specifiek */
-        .harvest-fill {
-            background: linear-gradient(90deg, var(--accent-green), var(--accent-pink));
-            box-shadow: 0 0 10px rgba(236, 72, 153, 0.5);
-        }
-
-        /* Snoei Balk Specifiek */
-        .pruning-fill {
-            background: linear-gradient(90deg, #a16207, var(--accent-orange));
-            box-shadow: 0 0 10px rgba(251, 146, 60, 0.5);
-        }
+        .harvest-fill { background: linear-gradient(90deg, var(--accent-green), var(--accent-pink)); }
+        .pruning-fill { background: linear-gradient(90deg, #a16207, var(--accent-orange)); }
 
         .info-box {
             background: rgba(0,0,0,0.3);
@@ -192,14 +181,17 @@
             padding: 15px;
             font-size: 0.85rem;
             line-height: 1.5;
-            color: rgba(255,255,255,0.8);
-            border-top: 1px solid rgba(255,255,255,0.1);
+            color: rgba(255,255,255,0.85);
+            border-left: 3px solid transparent; /* Wordt ingevuld door JS */
+            margin-top: 10px;
         }
 
-        .highlight-label {
-            color: #facc15;
-            font-weight: 700;
-        }
+        .info-row { margin-bottom: 8px; }
+        .info-row:last-child { margin-bottom: 0; }
+
+        .highlight-label { font-weight: 700; opacity: 0.9; margin-right: 5px; }
+        .taste-label { color: #facc15; }     /* Geel */
+        .prune-label { color: #fb923c; }     /* Oranje */
 
         @media (max-width: 600px) {
             h1 { font-size: 1.8rem; }
@@ -222,7 +214,7 @@
     <div class="dashboard-grid" id="dashboard"></div>
 
     <script>
-        // DATA: Nu met 'pruningSeasons'
+        // DATA: Nu met 'pruningInstruction'
         const fruitData = [
             {
                 id: 1,
@@ -230,9 +222,8 @@
                 latin: "Rubus idaeus",
                 iconType: 'raspberry', 
                 taste: "Klassiek framboos, zoet & stevig.",
-                // Oogst: Juni & Sept
+                pruningInstruction: "Knip enkel de topjes weg die fruit gaven. Laat de rest van de stengel staan voor zomerfruit!",
                 harvestSeasons: [{ startMonth: 5, startDay: 15, endMonth: 6, endDay: 30 }, { startMonth: 7, startDay: 15, endMonth: 9, endDay: 15 }],
-                // Snoei: Winter (Jan/Feb)
                 pruningSeasons: [{ startMonth: 0, startDay: 1, endMonth: 1, endDay: 28 }]
             },
             {
@@ -241,9 +232,8 @@
                 latin: "Rubus Tayberry",
                 iconType: 'raspberry',
                 taste: "Aromatisch, kruising braam/framboos.",
-                // Oogst: Juni/Juli
+                pruningInstruction: "Knip alle takken die fruit hebben gegeven tot op de bodem weg. Bind de nieuwe takken vast.",
                 harvestSeasons: [{ startMonth: 5, startDay: 25, endMonth: 6, endDay: 20 }],
-                // Snoei: Direct NA oogst (Eind Juli / Aug)
                 pruningSeasons: [{ startMonth: 6, startDay: 25, endMonth: 7, endDay: 30 }]
             },
             {
@@ -252,9 +242,8 @@
                 latin: "Rubus idaeus 'Fallgold'",
                 iconType: 'raspberry',
                 taste: "Goudgeel, honingachtig zoet.",
-                // Oogst: Juli-Sept
+                pruningInstruction: "Alles mag plat! Knip alle takken af tot 10 cm boven de grond.",
                 harvestSeasons: [{ startMonth: 6, startDay: 10, endMonth: 8, endDay: 20 }],
-                // Snoei: Winter (Jan/Feb)
                 pruningSeasons: [{ startMonth: 0, startDay: 1, endMonth: 1, endDay: 28 }]
             },
             {
@@ -263,9 +252,8 @@
                 latin: "Rubus idaeus",
                 iconType: 'raspberry',
                 taste: "Zeer sappig, grote vrucht.",
-                // Oogst: Juni & Aug
+                pruningInstruction: "Selectief snoeien: Knip enkel de afgedragen topjes weg. Niet tot op de bodem!",
                 harvestSeasons: [{ startMonth: 5, startDay: 20, endMonth: 6, endDay: 25 }, { startMonth: 7, startDay: 15, endMonth: 8, endDay: 30 }],
-                // Snoei: Winter (Jan/Feb)
                 pruningSeasons: [{ startMonth: 0, startDay: 1, endMonth: 1, endDay: 28 }]
             },
             {
@@ -274,9 +262,8 @@
                 latin: "Rubus idaeus x occidentalis",
                 iconType: 'raspberry',
                 taste: "Exotisch, rokerig aroma.",
-                // Oogst: Juli-Aug
+                pruningInstruction: "Makkelijk: Knip alle takken af tot vlak boven de grond. Hij groeit snel terug.",
                 harvestSeasons: [{ startMonth: 6, startDay: 15, endMonth: 7, endDay: 30 }],
-                // Snoei: Winter (Jan/Feb)
                 pruningSeasons: [{ startMonth: 0, startDay: 1, endMonth: 1, endDay: 28 }]
             },
             {
@@ -285,9 +272,8 @@
                 latin: "Ribes rubrum",
                 iconType: 'redcurrant',
                 taste: "Friszuur, sappig (Rode bes).",
-                // Oogst: Juni
+                pruningInstruction: "Uitdunnen: Verwijder oud hout en takken die kruisen. Zorg voor licht en lucht in de struik.",
                 harvestSeasons: [{ startMonth: 5, startDay: 20, endMonth: 6, endDay: 15 }],
-                // Snoei: Winter (Jan-Maart)
                 pruningSeasons: [{ startMonth: 0, startDay: 1, endMonth: 2, endDay: 15 }]
             },
             {
@@ -296,14 +282,12 @@
                 latin: "Fragaria ananassa",
                 iconType: 'strawberry',
                 taste: "Zoet, bosaardbei-achtig.",
-                // Oogst: Juni-Okt
+                pruningInstruction: "Schoonmaken: Knip enkel bruine bladeren weg. ⚠️ Laat het groene hartje staan!",
                 harvestSeasons: [{ startMonth: 5, startDay: 15, endMonth: 9, endDay: 15 }],
-                // Snoei: Maart (Oud blad wegknippen)
                 pruningSeasons: [{ startMonth: 2, startDay: 1, endMonth: 2, endDay: 31 }]
             }
         ];
 
-        // --- ALGEMENE LOGICA ---
         function getNextEvent(seasons) {
             const now = new Date();
             const currentYear = now.getFullYear();
@@ -313,7 +297,6 @@
                 let start = new Date(currentYear, season.startMonth, season.startDay);
                 let end = new Date(currentYear, season.endMonth, season.endDay);
                 possibilities.push({ start, end });
-                // Volgend jaar ook checken
                 let startNext = new Date(currentYear + 1, season.startMonth, season.startDay);
                 let endNext = new Date(currentYear + 1, season.endMonth, season.endDay);
                 possibilities.push({ start: startNext, end: endNext });
@@ -329,7 +312,7 @@
                     return { status: 'upcoming', date: p.start, type: 'upcoming' };
                 }
             }
-            return { status: 'upcoming', date: possibilities[0].start }; // Fallback
+            return { status: 'upcoming', date: possibilities[0].start }; 
         }
 
         function calculateProgress(targetDate, maxDays = 300) {
@@ -342,7 +325,6 @@
             return Math.max(5, Math.min(100, percentage));
         }
 
-        // --- ICON LOGICA ---
         function getHarvestIcon(percentage, isActive, iconType) {
             let finalIcon = "🍇"; 
             if (iconType === 'strawberry') finalIcon = "🍓";
@@ -356,10 +338,10 @@
         }
 
         function getPruningIcon(percentage, isActive) {
-            if (isActive) return "✂️"; // Nu snoeien!
-            if (percentage < 40) return "🍃"; // Vol in blad
-            if (percentage < 80) return "🍂"; // Blad valt
-            return "🪵"; // Kaal hout
+            if (isActive) return "✂️"; 
+            if (percentage < 40) return "🍃"; 
+            if (percentage < 80) return "🍂"; 
+            return "🪵"; 
         }
 
         let hasActiveHarvest = false;
@@ -371,7 +353,7 @@
             hasActiveHarvest = false;
 
             fruitData.forEach(fruit => {
-                // 1. OOGST INFO
+                // OOGST
                 const harvestInfo = getNextEvent(fruit.harvestSeasons);
                 let harvestDays = Math.ceil((harvestInfo.date - now) / (1000 * 60 * 60 * 24));
                 let harvestProgress = harvestInfo.status === 'active' ? 100 : calculateProgress(harvestInfo.date);
@@ -379,18 +361,17 @@
                 let harvestLabel = harvestInfo.status === 'active' ? "PLUKKEN MAAR!" : `${harvestDays} dagen tot oogst`;
                 let harvestIcon = getHarvestIcon(harvestProgress, harvestInfo.status === 'active', fruit.iconType);
 
-                // 2. SNOEI INFO
+                // SNOEI
                 const pruningInfo = getNextEvent(fruit.pruningSeasons);
                 let pruningDays = Math.ceil((pruningInfo.date - now) / (1000 * 60 * 60 * 24));
-                let pruningProgress = pruningInfo.status === 'active' ? 100 : calculateProgress(pruningInfo.date, 365); // Snoei kijkt heel jaar vooruit
+                let pruningProgress = pruningInfo.status === 'active' ? 100 : calculateProgress(pruningInfo.date, 365);
                 let pruningLabel = pruningInfo.status === 'active' ? "NU SNOEIEN!" : `${pruningDays} dagen tot snoei`;
                 let pruningIcon = getPruningIcon(pruningProgress, pruningInfo.status === 'active');
 
-                // Styling voor aardbei rood vs framboos roze
+                // Styling
                 const isStrawberry = fruit.iconType === 'strawberry';
                 const mainColor = isStrawberry ? '#ef4444' : '#ec4899';
                 
-                // HTML GENERATIE
                 const cardHTML = `
                     <div class="fruit-card" style="border-color: ${mainColor}80; box-shadow: 0 0 15px ${mainColor}40;">
                         <div class="header-section">
@@ -425,8 +406,15 @@
                             </div>
                         </div>
 
-                        <div class="info-box">
-                            <span class="highlight-label">🍬 Smaak:</span> ${fruit.taste}
+                        <div class="info-box" style="border-left-color: ${mainColor}">
+                            <div class="info-row">
+                                <span class="highlight-label taste-label">🍬 Smaak:</span>
+                                ${fruit.taste}
+                            </div>
+                            <div class="info-row">
+                                <span class="highlight-label prune-label">✂️ Hoe:</span>
+                                ${fruit.pruningInstruction}
+                            </div>
                         </div>
                     </div>
                 `;
@@ -436,17 +424,16 @@
             if(hasActiveHarvest) startConfetti();
         }
 
-        // --- UPDATE ACTIE BALK (Boven) ---
         function updateActionBar() {
             const month = new Date().getMonth(); 
             let msg = "";
             let icon = "🌱";
 
-            if (month <= 1) { // Jan-Feb
+            if (month <= 1) { 
                 msg = "✂️ WINTERSNOEI: De frambozen en aalbessen moeten nu gesnoeid worden!";
                 icon = "❄️";
             } else if (month === 2) { 
-                msg = "💩 Maart: Tijd om te mesten en de aardbeien (Charlotte) op te schonen.";
+                msg = "💩 Maart: Tijd om te mesten en de aardbeien (Charlotte) schoon te maken.";
                 icon = "🌱";
             } else if (month >= 5 && month <= 8) { 
                 msg = "🧺 Oogsttijd! Controleer dagelijks de struiken van Lou en Noé.";
