--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <canvas id="confetti-canvas"></canvas>
 
-    <h1>🍓🍒 Lou en Noé hun rode vruchten tuin 🍇🍓</h1>
+    <h1>🍓🍒 Lou en Noé's rode vruchtentuin 🍇🍓</h1>
 
     <div class="action-bar" id="actionBar">
         <div class="action-icon">📅</div>
